Discovery Tests Fixes